<resources>
    <string name="app_name">阿瞳学习</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="author">nech7506</string>
    <string name="email">nick7506@hotmail.com</string>
    <string name="version">0.8.2</string>
    <string name="title_activity_settings">设置</string>
    <string name="welcome">欢迎使用阿瞳学习Android版（V0.8.2）</string>
    <string name="todo">功能保留，敬请期待！</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">通常</string>

    <string name="pref_title_study_way">随堂练习</string>
    <string name="pref_description_study_way">选项选择时可根据课程需要练习，否则全部
    </string>


    <string name="pref_title_display_name">使用者</string>
    <string name="pref_default_display_name">陈耀辉</string>

    <string name="pref_title_english_amount">英语题量</string>
    <string name="pref_default_english_amount">50</string>

    <string name="pref_title_chinese_amount">语文题量</string>
    <string name="pref_default_chinese_amount">30</string>

    <string name="pref_title_grade">请选择年纪</string>
    <string-array name="pref_list_grades">
        <item>初一上学期</item>
        <item>初一下学期</item>
        <item>初二上学期</item>
        <item>初二下学期</item>
        <item>初三上学期</item>
        <item>初三下学期</item>
    </string-array>
    <string-array name="pref_grade_values">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="courses">
        <item>数学</item>
        <item>语文</item>
        <item>英语</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_alert">title alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
